test/errors/classes/class_constructor_initializer_fail.hy
class Base
{
    Base() {}
}

class Derived inherits Base
{
    Derived() : Base() {}
}

// expect: Expected '{' after constructor declaration